Исправлено работа с аватаркой
